# homelab

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  build.sh  docker-compose.yml  justfile  pyproject.toml  test.ipynb  version
.docs/docker/: portainer-systemd.md
.docs/gnome_config/: setup_docs.md
doc/: README.md  roadmap.md  workspace.md
doc/influxdb/: notes.md
grafana/: build.sh
grafana/dashboards/: Garmin-Grafana-Dashboard.yaml  weatherflow-collector.yml  weatherflow-collector2.yml
grafana/dashboards/garmin/: Garmin-Grafana-Dashboard.json
grafana/dashboards/weatherflow-collector/: weatherflow_collector-current_conditions-influxdb.json  weatherflow_collector-device_details-influxdb.json  weatherflow_collector-forecast-influxdb.json  weatherflow_collector-forecast_vs_observed-influxdb.json  weatherflow_collector-historical_local-udp-influxdb.json  weatherflow_collector-historical_remote-influxdb.json  weatherflow_collector-overview-influxdb.json  weatherflow_collector-rain_and_lightning-influxdb.json  weatherflow_collector-system_stats-influxdb.json  weatherflow_collector-today_so_far_local-udp-influxdb.json  weatherflow_collector-today_so_far_remote-influxdb.json
grafana/datasources/: influxdb-garmin.yaml
grafana/provisioning/datasources/: influxdb-weatherflow.yml
utils/: test.ipynb
