[project]
name = "homelab"
version = "0.2.0"
description = "Project for managing homelab stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["ipykernel>=6.24.0"]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["version:version"]
branch = "main"
tag_format = "{version}"
allow_zero_version = true
major_on_zero = false
upload_to_pypi = false
upload_to_release = false
upload_to_vcs_release = false


[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
