[project]
name = "homelab"
version = "0.2.0"
description = "Project for managing homelab stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.24.0",
    "jupyterlab>=4.0.0",
    "numpy>=1.26.0",
    "colorama",
    "pandas",
    "matplotlib",
    "influxdb>=5.3.2",
    "influxdb_client==1.44.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['influxdb_utils']
include = ['*']


# [tool.uv.workspace]
# members = ["influxdb_utils"]


[tool.uv.sources]
influxdb_utils = { workspace = true }
weatherflow-collector = {  workspace = true }

[tool.uv.workspace]
members = [
    "weatherflow-collector",
    "influxdb_utils",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["version:version"]
branch = "main"
tag_format = "{version}"
allow_zero_version = true
major_on_zero = false
upload_to_pypi = false
upload_to_release = false
upload_to_vcs_release = false


[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W1203",  # logging-format-interpolation
    "W0718",  # exception-escape
    "W0511",  # TODOs
    "F403",  # forbidden-import
]
